<resources>
    <string name="app_name">FantasyWorld</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello">Sample Android Design Support Library App</string>

    <string name="floating_labels">Floating Labels</string>
    <string name="fab">Floating Action Button</string>
    <string name="snackbar">Snackbar</string>
    <string name="tabs">Tabs</string>
    <string name="coordinator">Coordinator Layout</string>
    <string name="share">Share</string>
    <string name="facebook_app_id">1482404528491666</string>
    <string name="logout">Logout</string>

</resources>
